# depression-crawler

./: .cursorignore  .env.example  .gitignore  Makefile  README.md  README.ru.md  compose.yml
backend/: README.md
crawler-vk/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
crawler-vk/resources/: depression_dictionary.json
crawler-vk/src/: config.py  main.py
crawler-vk/src/api/: api.py
crawler-vk/src/client/: client.py
crawler-vk/src/crawler/: collect_data.py  collect_groups.py  crawler.py  predict_depression.py  prediction_handler.py  preprocess_data.py  preprocess_groups.py  status_manager.py
crawler-vk/src/crawler/database_handler/: __init__.py  database_handler.py
crawler-vk/src/crawler/exceptions/: crawler_exceptions.py
crawler-vk/src/crawler/model_loader/: model_loader.py
crawler-vk/src/crawler/prediction_handler/: __init__.py
crawler-vk/src/crawler/preprocessing/: __init__.py  feature_extractor.py  text_processor.py
crawler-vk/src/crawler/status_manager/: __init__.py  status_manager.py
crawler-vk/src/crawler/utils/: __init__.py  config.py
crawler-vk/src/db/: create_tables.sql  dal.py  db.py
crawler-vk/src/service/: service.py
crawler-vk/src/service/decorators/: rate_limited.py
crawler-vk/src/vk_types/: result.py
crawler-vk/src/vk_types/request/: params.py
crawler-vk/src/vk_types/response/: error.py  groups_get.py  groups_get_by_id.py  groups_search.py  newsfeed_search.py  users_get.py  wall_get.py  wall_get_by_id.py
crawler-vk/src/vk_types/vk_api_objects/: geo.py  post.py
front-next/: .env.example  Dockerfile  Dockerfile.compose  Makefile  README.md  package-lock.json  package.json
front-next/src/: middleware.ts
front-next/src/app/: layout.tsx  page.tsx
front-next/src/app/(server)/api/auth/login/: route.ts
front-next/src/app/(server)/api/auth/logout/: route.ts
front-next/src/app/(server)/api/auth/me/: route.ts
front-next/src/app/(server)/api/crawler/collect/: route.ts
front-next/src/app/about/: page.tsx
front-next/src/app/api/auth/login/: route.ts
front-next/src/app/api/auth/logout/: route.ts
front-next/src/app/api/auth/me/: route.ts
front-next/src/app/api/crawler/start/: route.ts
front-next/src/app/api/crawler/status/: route.ts
front-next/src/app/api/crawler/stop/: route.ts
front-next/src/app/crawler/: page.tsx
front-next/src/app/crawler/components/: CrawlerForm.tsx  CrawlerStatus.tsx  StopButton.tsx  СrawlerSummary.tsx
front-next/src/app/crawler/hooks/: usePolling.ts
front-next/src/app/dashboard/: page.tsx
front-next/src/app/login/: page.tsx
front-next/src/components/: AuthProvider.tsx  Header.tsx  Layout.tsx
front-next/src/lib/: db.ts  env.ts  validate.ts
front-next/src/types/: crawler.ts
frontend/: README.md
(+2 files in other folders)
