[project]
name = "crawler-vk"
version = "0.1.0"
description = ""
authors = [{ name = "Ivan Baklanov", email = "nymless.ib@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.4,<0.10",
    "mypy>=1.15.0,<2",
    "types-requests>=2.32.0.20241016,<3",
]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
