[project]
name = "crawler-vk"
version = "0.1.0"
description = ""
authors = [{ name = "Ivan Baklanov", email = "nymless.ib@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi>=0.115.8",
    "vk-data-collector>=0.2.4",
    "pandas>=2.2.3",
    "natasha>=1.6.0",
    "nltk>=3.9.1",
    "scikit-learn>=1.6.1",
    "gensim>=4.3.3",
    "wget>=3.2",
    "setuptools>=80.7.1",
    "pydantic-settings>=2.9.1",
    "gdown>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.4,<0.10",
    "mypy>=1.15.0,<2",
    "types-requests>=2.32.0.20241016,<3",
    "pytest>=8.3.5",
    "types-psycopg2>=2.9.21.20250516",
]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["E501"]
